--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="content">
 				<header class="major">
 					<span class="icon solid major fa-camera-retro"></span>
-					<h2>Lets Share Photos</h2>
+					<h2>Let's Share Photos</h2>
 				</header>
 				<p>We'd love to see any photos you've taken, upload to our shared album or just tag us on social media
 				</p>
@@ -313,6 +313,9 @@
 				<p>We'd like to say thank you to all the people who helped us plan and execute this celebration of love;</p>
 				<br/>
 				<ul class="actions stacked">
+					<li>
+						Photography: <a target="_blank" href="https://www.whitneyerinphotography.co/">Whitney Erin</a>
+					</li>
 					<li>
 						Flowers: <a target="_blank" href="https://thymestudio.ca/">Thyme Studio</a>
 					</li>
