--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 	<section id="header">
 		<header class="major">
 			<h1>Thank you for joining us</h1>
-			<p>October 4th, 2022 - Miena Nakamura & Doug Jones</p>
+			<div class="row align-css-center">
+			<div class="col-3 col-12-small align-right">
+				<p>October 4th, 2022</p>	
+			</div>
+			<div class="col-1"><p> - </p></div>
+			<div class="col-3 col-12-small align-left">
+				<p>Miena Nakamura & Doug Jones</p>	
+			</div>
+		</div>
 		</header>
 		<div class="container">
 			<ul class="actions special">
