--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 				<li><a href="mailto:th3dougler@gmail.com" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Design: <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</footer>
 	</section>
